# facial-recognition-lab

./: .env.example  .gitignore  LICENSE  README.md  plan_facial.md  pyproject.toml  requirements.txt
benchmarks/: gpu_benchmark.py  insightface_benchmark.py
docs/: 01-producto.md  02-arquitectura.md  03-datos.md  04-api.md  05-flujos.md  06-operacion.md  07-seguridad-privacidad.md  08-pruebas-metricas.md  09-roadmap-ejecucion.md  10-guia-rapida.md  README.md  sprints.md
scripts/: run_camera_demo.py  run_eleccia_core.py  run_vision_runtime.py  test_stt_whisper.py  test_voice_chat.py
src/eleccia_audio/: __init__.py  io_lock.py
src/eleccia_core/: __init__.py  bootstrap.py  runtime.py
src/eleccia_core/api/: __init__.py  main.py  schemas.py
src/eleccia_listen/: __init__.py  service.py
src/eleccia_mqtt/: __init__.py  service.py
src/eleccia_vision/: __init__.py  camera_demo.py  camera_runtime.py  config.py  service.py
src/eleccia_vision/api/: main.py
src/eleccia_vision/application/: consistency.py  enrollment.py  events.py  persons.py  recognition.py  services.py
src/eleccia_vision/domain/: entities.py  interfaces.py
src/eleccia_voice/: __init__.py  assistant.py  service.py
src/facial_recognition/: bootstrap.py  config.py
tests/: test_bootstrap_encoder.py  test_config_env.py  test_consistency_service.py  test_eleccia_voice_service.py  test_enrollment_service.py  test_event_service.py  test_insightface_encoder.py  test_listen_service.py  test_quality_gate.py  test_recognition_service.py  test_service.py  test_voice_assistant.py
(+32 files in other folders)
