[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "facial-recognition"
version = "0.1.0"
description = "Modular facial recognition architecture"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "odt063" }]
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic>=2",
  "numpy<2.0",
  "opencv-python",
  "insightface",
  "onnxruntime-gpu",
  "faiss-cpu",
  "sqlalchemy",
  "pyyaml",
  "loguru",
  "ultralytics",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
  "mypy>=1.11",
  "black>=24.8",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py311"]
